fix #33 cssのfilter:invert()ゎiPhoneでぼゃける ぼゃけるのを回避する、禁断のbackface-visibillity: hidden;を適用

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -105,6 +105,8 @@ code:not([data-gist-id]) {
   -ms-filter: $var;
   -o-filter: $var;
   filter: $var;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .gist{
